--- a/resources/strings/strings.properties
+++ b/resources/strings/strings.properties
@@ -1,4 +1,6 @@
+autoLabel=autoLabel
 openFile=Open
+autoLabelDetail=auto label current image use pretrained cnn
 openFileDetail=Open image or label file
 quit=Quit
 quitApp=Quit application
