add autolabel button

--- a/resources/strings/strings.properties
+++ b/resources/strings/strings.properties
@@ -1,6 +1,6 @@
 autoLabel=autoLabel
 openFile=Open
-autoLabelDetail=auto label current image use pretrained cnn
+autoLabelDetail=auto label current image use cnn
 openFileDetail=Open image or label file
 quit=Quit
 quitApp=Quit application
