CenterNet is added into the project

--- a/resources/strings/strings-zh-CN.properties
+++ b/resources/strings/strings-zh-CN.properties
@@ -1,5 +1,6 @@
 saveAsDetail=將标签保存到其他文件
 changeSaveDir=改变存放目录
+autoLabel=自动标注
 openFile=打开文件
 shapeLineColorDetail=更改线条颜色
 resetAll=全部重置
@@ -10,6 +11,7 @@ verifyImg=验证图像
 zoominDetail=放大
 verifyImgDetail=验证图像
 saveDetail=保存标签文件
+autoLabelDetail=神经网络自动标注当前图像
 openFileDetail=打开图像文件
 fitWidthDetail=调整宽度适应到窗口宽度
 tutorial=YouTube教学
@@ -70,4 +72,5 @@ menu_file=文件(&F)
 menu_edit=编辑(&E)
 menu_view=查看(&V)
 menu_help=帮助(&H)
+menu_models=模型(&M)
 menu_openRecent=最近打开(&R)
