--- a/resources/strings/strings.properties
+++ b/resources/strings/strings.properties
@@ -1,4 +1,6 @@
+autoLabel=autoLabel
 openFile=Open
+autoLabelDetail=auto label current image use cnn
 openFileDetail=Open image or label file
 quit=Quit
 quitApp=Quit application
@@ -70,4 +72,5 @@ menu_file=&File
 menu_edit=&Edit
 menu_view=&View
 menu_help=&Help
+menu_models=&Models
 menu_openRecent=Open &Recent
