--- a/resources/strings/strings-zh-TW.properties
+++ b/resources/strings/strings-zh-TW.properties
@@ -1,5 +1,6 @@
 saveAsDetail=將標籤保存到其他文件
 changeSaveDir=改變存放目錄
+autoLabel=自動標註
 openFile=開啟檔案
 shapeLineColorDetail=更改線條顏色
 resetAll=重置
@@ -70,4 +71,5 @@ menu_file=檔案(&F)
 menu_edit=編輯(&E)
 menu_view=檢視(&V)
 menu_help=說明(&H)
+menu_models=模型(&M)
 menu_openRecent=最近開啟(&R)
