add score attribute and display

--- a/resources/strings/strings-zh-TW.properties
+++ b/resources/strings/strings-zh-TW.properties
@@ -61,6 +61,7 @@ labels=標籤
 autoSaveMode=自動儲存模式
 singleClsMode=單一類別模式
 displayLabel=顯示類別
+displayScore=顯示分數
 fileList=檔案清單
 files=檔案
 advancedMode=進階模式
