--- a/resources/strings/strings.properties
+++ b/resources/strings/strings.properties
@@ -62,6 +62,7 @@ labels=Labels
 autoSaveMode=Auto Save mode
 singleClsMode=Single Class Mode
 displayLabel=Display Labels
+displayScore=Display Scores
 fileList=File List
 files=Files
 advancedMode=Advanced Mode
